// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`getTimelineMeasureMarks width sweep with fixed measureCount 1`] = `
[
  {
    "input": {
      "measureCount": 64,
      "width": 120,
    },
    "output": {
      "step": 40,
      "tickEvery": 8,
    },
  },
  {
    "input": {
      "measureCount": 64,
      "width": 200,
    },
    "output": {
      "step": 20,
      "tickEvery": 4,
    },
  },
  {
    "input": {
      "measureCount": 64,
      "width": 320,
    },
    "output": {
      "step": 10,
      "tickEvery": 2,
    },
  },
  {
    "input": {
      "measureCount": 64,
      "width": 480,
    },
    "output": {
      "step": 10,
      "tickEvery": 2,
    },
  },
  {
    "input": {
      "measureCount": 64,
      "width": 640,
    },
    "output": {
      "step": 5,
      "tickEvery": 1,
    },
  },
  {
    "input": {
      "measureCount": 64,
      "width": 900,
    },
    "output": {
      "step": 5,
      "tickEvery": 1,
    },
  },
  {
    "input": {
      "measureCount": 64,
      "width": 1200,
    },
    "output": {
      "step": 5,
      "tickEvery": 1,
    },
  },
]
`;

exports[`getTimelineMeasureMarks measure sweep with fixed width 1`] = `
[
  {
    "input": {
      "measureCount": 1,
      "width": 640,
    },
    "output": {
      "step": 1,
      "tickEvery": undefined,
    },
  },
  {
    "input": {
      "measureCount": 2,
      "width": 640,
    },
    "output": {
      "step": 1,
      "tickEvery": undefined,
    },
  },
  {
    "input": {
      "measureCount": 4,
      "width": 640,
    },
    "output": {
      "step": 1,
      "tickEvery": undefined,
    },
  },
  {
    "input": {
      "measureCount": 8,
      "width": 640,
    },
    "output": {
      "step": 1,
      "tickEvery": undefined,
    },
  },
  {
    "input": {
      "measureCount": 16,
      "width": 640,
    },
    "output": {
      "step": 1,
      "tickEvery": undefined,
    },
  },
  {
    "input": {
      "measureCount": 32,
      "width": 640,
    },
    "output": {
      "step": 5,
      "tickEvery": 1,
    },
  },
  {
    "input": {
      "measureCount": 64,
      "width": 640,
    },
    "output": {
      "step": 5,
      "tickEvery": 1,
    },
  },
  {
    "input": {
      "measureCount": 128,
      "width": 640,
    },
    "output": {
      "step": 10,
      "tickEvery": 2,
    },
  },
  {
    "input": {
      "measureCount": 256,
      "width": 640,
    },
    "output": {
      "step": 20,
      "tickEvery": 4,
    },
  },
]
`;
